# ParallelRayTracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  refactor.md  wavefront.md
assets/shaders/: quad_frag.glsl  quad_vert.glsl
src/: CMakeLists.txt  OpenGLUtils.cpp  OpenGLUtils.h  main.cpp
src/backend/cpu/: renderer.cpp  renderer.h
src/backend/cuda_megakernel/: renderer.cu  renderer.h
src/backend/cuda_wavefront/: renderer.cu  renderer.h  soa.cpp  soa.h
src/backend/optix/: device_programs.cu  device_types.h  launch_params.h  renderer.cpp  renderer.h
src/core/: Core.h  camera.h  core.h  film.cpp  film.cu  film.h  geometry.h  handles.h  imgui_impl_glfw.cpp  material.h  material_handle.h  math.h  mesh.cpp  mesh.h  primitive.cpp  primitive.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shape.cpp  shape.h  surface_interaction.h  tagged_pointer.h
src/imgui_impl/: imgui_impl_opengl3.cpp
src/opengl/: opengl_renderer.cpp  opengl_renderer.h  opengl_utils.cpp  opengl_utils.h
